Fix the margin issue in top-navbar.
-dirty fix using a additional div and flex grow property. need refoactoring in the future.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <p class="header-nav__logo-text">Premium</p>
                 </li>
             </ul>
+            <!-- dynamic margin? -->
+            <div class="margin">
+            </div>
             <ul class="header-nav__middle">
                 <li class="header-nav__items header-nav__search-container">
                     <input class="search"type="search" placeholder="Search">
@@ -43,7 +46,9 @@
                     </span>
                 </li>
             </ul>
-            <ul class="header-nav__right">
+            <!-- dynamic margin? -->
+            <div class="margin"></div>
+           <ul class="header-nav__right">
                 <li class="header-nav__items">
                     <span class="icon-container">
                         <svg class="icon">
