add the genre section
known issue
-no arrow click function to scroll.
-all button is white by default and cant change.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
             </ul>
         </nav>
      </header>
+     <aside class="genre">
+        <menu class="genre__container">
+            <li class="genre__items">all</li>
+            <li class="genre__items">lorem</li>
+            <li class="genre__items">Lorem, ipsum.</li>
+            <li class="genre__items">lorem</li>
+            <li class="genre__items">Lorem, ipsum.</li>
+            <li class="genre__items">lorem</li>
+            <li class="genre__items">Lorem, ipsum.</li>
+        </menu>
+    </aside>
 
      <section class="gallery">
         <figure class="card">
