--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
     <!-- card gallery -->
 
-    <section class="gallery">
-    <figure class="crd">
+    <section class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 justify-content-center gx-3">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -136,7 +136,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -149,7 +149,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -162,7 +162,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -175,7 +175,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -188,7 +188,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -201,7 +201,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -214,7 +214,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -227,7 +227,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -240,7 +240,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -253,7 +253,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -266,7 +266,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -279,7 +279,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -292,7 +292,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -305,7 +305,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -318,7 +318,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -331,7 +331,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -344,7 +344,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -357,7 +357,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -370,7 +370,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -383,7 +383,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -396,7 +396,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -409,7 +409,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -422,7 +422,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -435,7 +435,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
@@ -448,7 +448,7 @@
             </div>
         </figcaption>
     </figure>
-    <figure class="crd">
+    <figure class="col crd">
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="" class="crd__image">
         <figcaption class="crd__detail">
             <div class="crd__avatar">
