--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <!-- bs-icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- bs-5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" defer></script>
@@ -84,7 +86,7 @@
 
      <!-- canvas -->
 
-     <nav class="offcanvas offcanvas-start bg-black text-bg-dark" tabindex="-1" id="side-nav" aria-labelledby="side-nav-content">
+     <nav class="offcanvas offcanvas-start bg-black text-bg-dark bg-opacity-75" style="width: fit-content;" tabindex="-1" id="side-nav" aria-labelledby="side-nav-content">
 
         <div class="offcanvas-header">
             <ul class="header-nav__left ps-0">
@@ -102,6 +104,32 @@
             </ul>
         </div>
 
+        <div class="offcanvas-body">
+            <ul class=" text-capitalize fs-5 mt-3 px-3 list-group-flush">
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-house-door-fill px-3"></i>home</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"></i><i class="bi bi-file-earmark-play-fill px-3"></i>shorts</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-collection-play-fill px-3"></i>subcriptions</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-music-note-list px-3"></i>youtube music</li>
+                <hr>
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-collection-fill px-3"></i>library</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-clock-history px-3"></i>history</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-camera-video-fill px-3"></i>your videos</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-stopwatch-fill px-3"></i>watch later</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-download px-3"></i>downloads</li>
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-scissors px-3"></i>your clips</li>
+
+                <li class="list-group-item-secondary list-group-item-action rounded-3 px-2"><i class="bi bi-chevron-compact-down px-3"></i>show more</li>
+
+        
+            </ul>
         
 
      </nav>
@@ -109,14 +137,14 @@
      <!-- badges -->
 
      <aside class="genre">
-        <menu class="genre__container">
-            <li class="genre__items">all</li>
-            <li class="genre__items">lorem</li>
-            <li class="genre__items">Lorem, ipsum.</li>
-            <li class="genre__items">lorem</li>
-            <li class="genre__items">Lorem, ipsum.</li>
-            <li class="genre__items">lorem</li>
-            <li class="genre__items">Lorem, ipsum.</li>
+        <menu class="genre__container align-items-center text-capitalize ">
+            <li class="badge text-bg-light p-2 me-1 fs-6">all</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">lorem</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">Lorem, ipsum.</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">lorem</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">Lorem, ipsum.</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">lorem</li>
+            <li class="badge text-bg-secondary p-2 me-1 fs-6">Lorem, ipsum.</li>
         </menu>
     </aside>
 
